Fix markdown errors.

--- a/minuta-2018-01-31.md
+++ b/minuta-2018-01-31.md
@@ -1,47 +1,42 @@
 ## Minuta de reunión
+
 **Fecha:** 31 de Enero de 2018
+
 **Participantes:** Enrique, Diego, Coco, Mateo, Cuervo, Chiche, Gabo
 
 ##Discusión:
 
-//Aplicación//
-Diego muestra la ~maqueta~ versión **final** 
-En el splash poner info del patrocinador
-Huevos de pascua (cara del Coco, por ej.)
-Espacio en la App de intercambio de GIF y premiar al mejor. --> Hashtag en twitter y ganamos visibilidad.
+_Aplicación_
+* Diego muestra la ~~maqueta~~ versión **final** 
+* En el splash poner info del patrocinador
+* Huevos de pascua (cara del Coco, por ej.)
+* Espacio en la App de intercambio de GIF y premiar al mejor. --> Hashtag en twitter y ganamos visibilidad.
 
 
-//Fecha//
-24 y 25 de Mayo.
-Costo: se discutió alternativas, no hay definición aún.
+_Fecha_
+* Se define hacerlo los días 24 y 25 de Mayo. El feriado en Argentina puede ayudar.
+* _Costo_: se discutieron alternativas, no hay definición aún.
 
 
-//Happenings y Actividades Para Lelas//
- - Una pequeña hogera (o una grande) (o en la playa).
- - Organizado por nosotros y pago por esponsor.
+_Happenings y Actividades Para Lelas_
+* Una pequeña hogera (o una grande) (o en la playa).
+* Organizado por nosotros y pago por esponsor.
 
- - Mesa con candados, ganzúas y etc. Lockpicking Villa
+* Mesa con candados, ganzúas y etc. Lockpicking Villa
 
-//Sponsors//
- - Bizarro (Cuervo)
- - Don Pascual (Mateo)
+_Sponsors_
+* Bizarro (Cuervo)
+* Don Pascual (Mateo)
 
-Tener pensado a quién recomendarles para que no tengan que pensar.
+* Tener pensado a quién recomendarles para que no tengan que pensar. Responsables: Mateo y Mauricio
 
-Responsables: Mateo y Mauricio
-
-
-//Sitio//
-Este fin de semana se mueve junto con el CFP (Cuervo y Mateo)
-DNS con CNAME al sitio viejo en principio, usaremos 2017.charrua.org
+_Sitio_
+* Este fin de semana se mueve junto con el CFP (Cuervo y Mateo)
+* DNS con CNAME al sitio viejo en principio, usaremos 2017.charrua.org
 
 
-//Prensa//
-Chiche tiene encaminado el tema con Sotelo y Canal 10.
-Enrique puede tocar El País.
-Mateo puede pedir en CUTI que comiencen a promocionarlo entre los socios.
-
-
-
-
+_Prensa_
+* Chiche tiene encaminado el tema con Sotelo y Canal 10.
+* Enrique puede tocar El País.
+* Mateo puede pedir en CUTI que comiencen a promocionarlo entre los socios.
 
