--- a/minuta-2018-01-31.md
+++ b/minuta-2018-01-31.md
@@ -40,3 +40,9 @@ _Prensa_
 * Enrique puede tocar El País.
 * Mateo puede pedir en CUTI que comiencen a promocionarlo entre los socios.
 
+-Redes socailes
+* Adrián con el logo definido puede empezar a mover Twitter
+
+
+
+
